Use single method for fonts and strings measurements
Bug 373799: [Protocol] Make TextSizeDetermination a separate
synchronizable object 
https://bugs.eclipse.org/bugs/show_bug.cgi?id=373799